fix poor contrast on wayfinding boxes

--- a/src/components/Homepage/WayfindingBoxes/styles.module.css
+++ b/src/components/Homepage/WayfindingBoxes/styles.module.css
@@ -18,7 +18,7 @@
   align-items: center;
   border-radius: var(--ifm-global-radius);
   margin-bottom: var(--ifm-heading-margin-bottom);
-  background-color: var(--ifm-background-surface-color);
+  background-color: var(--ifm-color-secondary);
   width: 100%;
   height: 250px;
 }
